fixed formatting on skills section by adding flex-wrap and columns to each row, mobile optimized skills section and contact me section

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -273,3 +273,11 @@ input[type="radio"]:focus + label:before {
             }
 
     }
+
+    @media screen and (max-width: 390px) {
+
+        textarea.form-control {
+            height: 12em;
+        }
+
+    }
